# CompGraphicsLabs

CompGraphicsInd01_Savelev/: CompGraphicsInd01_Savelev.sln
CompGraphicsInd01_Savelev/CompGraphicsLab04/: Form1.Designer.cs  Form1.cs  Program.cs
CompGraphicsInd02_Savelev/: CompGraphicsInd02_Savelev.sln
CompGraphicsInd02_Savelev/CompGraphicsInd02_Savelev/: CornellRoom.cs  (+7 more)
CompGraphicsLab01/: CompGraphicsLab01.sln
CompGraphicsLab02/: CompGraphicsLab02.csproj  CompGraphicsLab02.sln  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form4.Designer.cs  Form4.cs  Form4.resx  Form5.Designer.cs  Form5.cs  Program.cs
CompGraphicsLab03/: CompGraphicsLab03.csproj  CompGraphicsLab03.sln  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form4.Designer.cs  Form4.cs  Program.cs
CompGraphicsLab04/: CompGraphicsLab04.sln
CompGraphicsLab05/: CompGraphicsLab05.sln
CompGraphicsLab06/: CompGraphicsLab06.sln
CompGraphicsLab07/: CompGraphicsLab07.sln
CompGraphicsLab08/: CompGraphicsLab08.sln
CompGraphicsLab09/: CompGraphicsLab09.sln
CompGraphicsLab10_Savelev/: .gitignore  CMakeLists.txt  figures.cpp  figures.h  main.cpp
CompGraphicsLab11/: main.cpp  opengl.vcxproj  opengl.vcxproj.filters
CompGraphicsLab12/: opengl.vcxproj  opengl.vcxproj.filters  shader000.cpp  shader011.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
CompGraphicsLab13/: .gitignore  GLShader.cpp  GLShader.h  Header.h  main.cpp  opengl.vcxproj  opengl.vcxproj.filters  task1.cpp  task2.cpp  task3.cpp
(+76 files in other folders)
